--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -10,186 +9,276 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <meta name="description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
-
   <meta property="og:title" content="SMART AI | מעיין שלום">
   <meta property="og:description" content="כלים, הדרכות והרצאות בבינה מלאכותית">
   <meta property="og:image" content="https://maayan012.github.io/AI/preview.jpg">
   <meta property="og:url" content="https://maayan012.github.io/AI/">
 
   <style>
-    body {
-      font-family: 'Assistant', sans-serif;
-      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-      min-height: 100vh;
-      color: white;
+    body{
+      font-family:'Assistant',sans-serif;
+      min-height:100vh;
+      color:#fff;
+      background:
+        radial-gradient(ellipse at 50% 0%, rgba(99,102,241,0.20) 0%, transparent 55%),
+        radial-gradient(ellipse at 85% 25%, rgba(56,189,248,0.14) 0%, transparent 55%),
+        radial-gradient(ellipse at 15% 85%, rgba(37,99,235,0.12) 0%, transparent 55%),
+        linear-gradient(180deg,#0b1020 0%, #0a1226 50%, #070b18 100%);
     }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.03);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 24px;
+
+    .cardShell{
+      border-radius:26px;
+      background: rgba(17,24,39,0.58);
+      border: 1px solid rgba(255,255,255,0.10);
+      backdrop-filter: blur(18px);
+      box-shadow:
+        0 22px 70px rgba(0,0,0,0.45),
+        inset 0 1px 0 rgba(255,255,255,0.06);
     }
-    .profile-img {
-      border: 4px solid #38bdf8;
-      box-shadow: 0 0 20px rgba(56, 189, 248, 0.4);
+
+    .profileRing{
+      display:inline-flex;
+      padding:3px;
+      border-radius:9999px;
+      background: linear-gradient(135deg, rgba(56,189,248,1) 0%, rgba(99,102,241,1) 50%, rgba(56,189,248,1) 100%);
+      box-shadow:
+        0 0 28px rgba(56,189,248,0.28),
+        0 0 60px rgba(56,189,248,0.12);
     }
-    .social-icon {
-      transition: all 0.3s ease;
-      fill: currentColor;
+
+    .profileImg{
+      width:120px;
+      height:120px;
+      border-radius:9999px;
+      object-fit:cover;
+      background:#111827;
+      border:3px solid rgba(15,23,42,0.9);
     }
-    .social-icon:hover {
-      transform: translateY(-3px);
-      color: #38bdf8;
+
+    .muted{color:rgba(226,232,240,0.65);}
+    .muted2{color:rgba(226,232,240,0.50);}
+
+    .bioText{
+      font-size: 15px;
+      line-height: 1.7;
     }
-    .btn-primary {
-      background: linear-gradient(90deg, #0ea5e9 0%, #2563eb 100%);
-      transition: all 0.3s ease;
+
+    .socialRow{
+      display:flex;
+      justify-content:center;
+      gap:14px;
+      margin-top:22px;
     }
-    .btn-primary:hover {
-      box-shadow: 0 4px 15px rgba(37, 99, 235, 0.4);
-      transform: scale(1.02);
+
+    .socialBtn{
+      width:46px;
+      height:46px;
+      border-radius:9999px;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.12);
+      color: rgba(226,232,240,0.70);
+      transition: transform .18s ease, background .18s ease, color .18s ease, box-shadow .18s ease;
+      text-decoration:none;
     }
-    .section-title {
-      position: relative;
-      display: inline-block;
-      margin-bottom: 1.5rem;
+
+    .socialBtn:hover{
+      transform: translateY(-2px);
+      background: rgba(255,255,255,0.07);
+      color:#e2e8f0;
+      box-shadow: 0 10px 22px rgba(0,0,0,0.25);
     }
-    .section-title::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      right: 0;
-      width: 40px;
-      height: 2px;
-      background: #38bdf8;
+
+    .sectionHead{
+      text-align:center;
+      font-weight:800;
+      font-size:20px;
+      margin-top:28px;
+      margin-bottom:18px;
+    }
+
+    .serviceList{
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+    }
+
+    .servicePill{
+      width:100%;
+      padding:18px 16px;
+      border-radius:18px;
+      text-align:center;
+      font-weight:700;
+      background:
+        radial-gradient(120% 140% at 15% 10%, rgba(255,255,255,0.08) 0%, rgba(255,255,255,0.03) 55%, rgba(255,255,255,0.02) 100%);
+      border: 1px solid rgba(255,255,255,0.10);
+      color:#fff;
+      user-select:none;
+      transition: transform .18s ease, background .18s ease, box-shadow .18s ease, border-color .18s ease;
+    }
+
+    .servicePill:hover{
+      transform: translateY(-2px);
+      border-color: rgba(255,255,255,0.16);
+      box-shadow: 0 14px 34px rgba(0,0,0,0.28);
+      background:
+        radial-gradient(120% 140% at 15% 10%, rgba(255,255,255,0.11) 0%, rgba(255,255,255,0.05) 55%, rgba(255,255,255,0.03) 100%);
+    }
+
+    .sectionTitle{
+      text-align:center;
+      font-weight:800;
+      font-size:20px;
+      margin:30px 0 16px;
+    }
+
+    .aboutList{
+      margin-top: 8px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      font-size: 14px;
+      line-height: 1.7;
+      color: rgba(226,232,240,0.65);
+    }
+
+    .aboutItem{
+      display:flex;
+      gap:10px;
+      align-items:flex-start;
+    }
+
+    .dot{
+      color:#38bdf8;
+      font-weight:800;
+      line-height: 1.4;
+    }
+
+    .ctaBtn{
+      width:100%;
+      padding:18px;
+      border-radius:9999px;
+      font-weight:800;
+      font-size:18px;
+      text-align:center;
+      color:#fff;
+      text-decoration:none;
+      background: linear-gradient(90deg,#0ea5e9 0%,#2563eb 55%,#6366f1 100%);
+      box-shadow:0 16px 44px rgba(37,99,235,0.26);
+      transition: transform .18s ease, box-shadow .18s ease, filter .18s ease;
+      display:block;
+      margin-top:22px;
+    }
+
+    .ctaBtn:hover{
+      transform: translateY(-2px);
+      box-shadow:0 20px 54px rgba(37,99,235,0.30);
+      filter: brightness(1.03);
     }
   </style>
 </head>
 
 <body class="p-4 md:p-8 flex justify-center">
+  <main class="w-full max-w-md cardShell px-6 md:px-8 pt-10 pb-8">
 
-  <div class="max-w-md w-full glass-card p-6 md:p-8 shadow-2xl">
-
-    <div class="text-center mb-8">
-      <div class="relative inline-block mb-4">
-        <img
-          src="https://github.com/maayan012/Maayan-picture/blob/main/Gemini_Generated_Image_ddfux6ddfux6ddfu.png?raw=true"
-          alt="מעיין שלום"
-          class="profile-img w-32 h-32 rounded-full object-cover mx-auto"
-          onerror="this.src='https://ui-avatars.com/api/?name=Maayan+Shalom&background=0ea5e9&color=fff&size=128'">
+    <header class="text-center">
+      <div class="mb-5 flex justify-center">
+        <span class="profileRing">
+          <img
+            src="https://github.com/maayan012/Maayan-picture/blob/main/Gemini_Generated_Image_ddfux6ddfux6ddfu.png?raw=true"
+            alt="מעיין שלום"
+            class="profileImg"
+            onerror="this.src='https://ui-avatars.com/api/?name=Maayan+Shalom&background=0ea5e9&color=fff&size=240'">
+        </span>
       </div>
 
-      <h1 class="text-3xl font-bold mb-2">מעיין שלום</h1>
-      <h2 class="text-sky-400 font-semibold text-lg mb-4">Maayan Shalom</h2>
+      <h1 class="text-4xl font-bold mb-2">מעיין שלום</h1>
+      <div class="text-sky-400 font-semibold mb-4">Maayan Shalom</div>
 
-      <p class="text-gray-300 leading-relaxed text-sm">
-        מהנדסת, מתמחה בשיפור תהליכים, דאטה ו AI
-        <br />
-        הרצאות והדרכות על בינה מלאכותית
-      </p>
-    </div>
+      <div class="muted bioText">מהנדסת, מתמחה בשיפור תהליכים, דאטה ו AI</div>
+      <div class="muted2 bioText mt-1">הרצאות והדרכות על בינה מלאכותית</div>
 
-    <div class="flex justify-center gap-5 mb-8">
+      <div class="socialRow">
+        <a class="socialBtn" href="https://wa.me/972543675502" target="_blank" rel="noopener" aria-label="WhatsApp">
+          <svg width="18" height="18" viewBox="0 0 32 32" fill="currentColor">
+            <path d="M16 0C7.163 0 0 7.163 0 16c0 2.837.742 5.502 2.038 7.821L0 32l8.426-2.012A15.9 15.9 0 0 0 16 32c8.837 0 16-7.163 16-16S24.837 0 16 0zm0 29.09a13.02 13.02 0 0 1-6.64-1.82l-.474-.28-4.996 1.193 1.335-4.873-.309-.5A13.03 13.03 0 1 1 16 29.09zm7.538-9.644c-.412-.206-2.437-1.203-2.815-1.342-.378-.137-.653-.206-.928.206-.275.413-1.065 1.342-1.305 1.618-.24.275-.481.309-.893.103-.412-.206-1.739-.64-3.31-2.04-1.222-1.09-2.047-2.437-2.286-2.849-.24-.413-.025-.636.181-.842.185-.184.412-.481.618-.721.206-.24.275-.413.412-.688.137-.275.069-.515-.034-.721-.103-.206-.928-2.232-1.27-3.058-.333-.8-.672-.69-.928-.703-.24-.012-.515-.015-.79-.015s-.721.103-1.1.515c-.378.413-1.444 1.412-1.444 3.446 0 2.034 1.48 4.001 1.687 4.277.206.275 2.916 4.453 7.07 6.247.988.426 1.76.681 2.36.872.991.315 1.893.27 2.605.164.795-.118 2.437-.996 2.783-1.96.344-.964.344-1.79.24-1.96-.103-.172-.378-.275-.79-.481z"/>
+          </svg>
+        </a>
 
-      <a href="https://wa.me/972543675502" target="_blank" class="social-icon text-gray-400" aria-label="WhatsApp">
-        <svg class="w-7 h-7" viewBox="0 0 32 32">
-          <path d="M16 0C7.163 0 0 7.163 0 16c0 2.837.742 5.502 2.038 7.821L0 32l8.426-2.012A15.9 15.9 0 0 0 16 32c8.837 0 16-7.163 16-16S24.837 0 16 0zm0 29.09a13.02 13.02 0 0 1-6.64-1.82l-.474-.28-4.996 1.193 1.335-4.873-.309-.5A13.03 13.03 0 1 1 16 29.09zm7.538-9.644c-.412-.206-2.437-1.203-2.815-1.342-.378-.137-.653-.206-.928.206-.275.413-1.065 1.342-1.305 1.618-.24.275-.481.309-.893.103-.412-.206-1.739-.64-3.31-2.04-1.222-1.09-2.047-2.437-2.286-2.849-.24-.413-.025-.636.181-.842.185-.184.412-.481.618-.721.206-.24.275-.413.412-.688.137-.275.069-.515-.034-.721-.103-.206-.928-2.232-1.27-3.058-.333-.8-.672-.69-.928-.703-.24-.012-.515-.015-.79-.015s-.721.103-1.1.515c-.378.413-1.444 1.412-1.444 3.446 0 2.034 1.48 4.001 1.687 4.277.206.275 2.916 4.453 7.07 6.247.988.426 1.76.681 2.36.872.991.315 1.893.27 2.605.164.795-.118 2.437-.996 2.783-1.96.344-.964.344-1.79.24-1.96-.103-.172-.378-.275-.79-.481z"/>
-        </svg>
-      </a>
+        <a class="socialBtn" href="mailto:smartai.maayan@gmail.com" aria-label="Email">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+            <polyline points="22,6 12,13 2,6"/>
+          </svg>
+        </a>
 
-      <a href="mailto:smartai.maayan@gmail.com" class="social-icon text-gray-400" aria-label="Email">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
-          <polyline points="22,6 12,13 2,6"/>
-        </svg>
-      </a>
+        <a class="socialBtn" href="https://www.linkedin.com/in/maayan-shalom012" target="_blank" rel="noopener" aria-label="LinkedIn">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+          </svg>
+        </a>
 
-      <a href="https://www.linkedin.com/in/maayan-shalom012" target="_blank" class="social-icon text-gray-400" aria-label="LinkedIn">
-        <svg class="w-7 h-7" viewBox="0 0 24 24">
-          <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-        </svg>
-      </a>
+        <a class="socialBtn" href="https://www.instagram.com/maayan.shalom.ai" target="_blank" rel="noopener" aria-label="Instagram">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
+          </svg>
+        </a>
 
-      <a href="https://www.instagram.com/maayan.shalom.ai" target="_blank" class="social-icon text-gray-400" aria-label="Instagram">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
-          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
-          <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
-        </svg>
-      </a>
+        <a class="socialBtn" href="https://www.facebook.com/profile.php?id=61576235122754" target="_blank" rel="noopener" aria-label="Facebook">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
+          </svg>
+        </a>
+      </div>
+    </header>
 
-      <a href="https://www.facebook.com/profile.php?id=61576235122754" target="_blank" class="social-icon text-gray-400" aria-label="Facebook">
-        <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
-        </svg>
-      </a>
+    <section>
+      <div class="sectionHead">קורסים והרצאות</div>
 
-    </div>
+      <div class="serviceList">
+        <div class="servicePill">הרצאות השראה</div>
+        <div class="servicePill">סדנאות והרצאות לארגונים</div>
+        <div class="servicePill">סדנאות והרצאות לאנשי חינוך</div>
+        <div class="servicePill">קורס AI MASTERY</div>
+        <div class="servicePill">מעבדות דמיון</div>
+      </div>
+    </section>
 
-    <div class="mb-8">
-      <h3 class="section-title text-xl font-bold">קורסים והרצאות</h3>
+    <section class="mt-8">
+      <div class="sectionTitle">קצת עלי</div>
 
-      <div class="grid grid-cols-1 gap-3">
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">✨</span>
-          <span>הרצאות השראה</span>
+      <div class="aboutList">
+        <div class="aboutItem">
+          <div class="dot">•</div>
+          <div>מהנדסת תעשייה וניהול (B.Sc, טכניון) מומחית ליישום פתרונות בינה מלאכותית.</div>
         </div>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🏢</span>
-          <span>סדנאות והרצאות לארגונים</span>
+        <div class="aboutItem">
+          <div class="dot">•</div>
+          <div>ניסיון פיקודי והובלת צוותים בצה״ל, בדרגת סרן.</div>
         </div>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🎓</span>
-          <span>סדנאות והרצאות לאנשי חינוך</span>
+        <div class="aboutItem">
+          <div class="dot">•</div>
+          <div>מעל עשור של ניסיון בניתוח ושיפור תהליכים, דאטה ו BI.</div>
         </div>
 
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🚀</span>
-          <span>קורס AI MASTERY</span>
-        </div>
-
-        <div class="flex items-center p-3 bg-white/5 rounded-xl border border-white/10 hover:bg-white/10 transition">
-          <span class="w-8 text-center text-sky-400">🧪</span>
-          <span>מעבדות דמיון</span>
+        <div class="aboutItem">
+          <div class="dot">•</div>
+          <div>גישה פרקטית המנגישה את עולם ה AI בצורה אפקטיבית ושימושית.</div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="mb-8">
-      <h3 class="section-title text-xl font-bold">קצת עלי</h3>
+    <section class="mt-10 text-center">
+      <a class="ctaBtn" href="https://wa.me/972543675502" target="_blank" rel="noopener">לפרטים והתאמה</a>
+      <p class="muted2 text-xs mt-6">SMART AI | Maayan Shalom</p>
+    </section>
 
-      <ul class="space-y-3 text-sm text-gray-300">
-        <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
-          <span>מהנדסת תעשייה וניהול (B.Sc, טכניון) מומחית ליישום פתרונות בינה מלאכותית.</span>
-        </li>
-        <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
-          <span>ניסיון פיקודי והובלת צוותים בצה״ל, בדרגת סרן.</span>
-        </li>
-        <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
-          <span>מעל עשור של ניסיון בניתוח ושיפור תהליכים, דאטה ו BI.</span>
-        </li>
-        <li class="flex gap-2">
-          <span class="text-sky-400 font-bold">•</span>
-          <span>גישה פרקטית המנגישה את עולם ה AI בצורה אפקטיבית ושימושית.</span>
-        </li>
-      </ul>
-    </div>
-
-    <div class="mt-8 text-center">
-      <a href="https://wa.me/972543675502" class="btn-primary block w-full py-4 rounded-full font-bold text-lg shadow-lg">
-        לפרטים והתאמה
-      </a>
-      <p class="text-gray-500 text-xs mt-6 opacity-60 uppercase tracking-widest">SMART AI | Maayan Shalom</p>
-    </div>
-
-  </div>
-
+  </main>
 </body>
 </html>
-
-
